Remove references to Guava code that isn't in the Android flavor in case the Android flavor is in the classpath at runtime. This shouldn't happen but can when annotation processors depend on Android-specific code.
RELNOTES=n/a
PiperOrigin-RevId: 364639679